--- a/market-core/src/main/resources/templates/orders.html
+++ b/market-core/src/main/resources/templates/orders.html
@@ -17,6 +17,7 @@
                 <h2>
                     <span class="badge text-bg-success">Витрина магазина</span>
                 </h2>
+                <a href="/logout" class="btn btn-outline-danger bi bi-box-arrow-right"> Выйти</a>
                 <a href="/cart/items" class="btn btn-secondary bi bi-cart4 ms-auto"> Корзина</a>
                 <a href="/items" class="btn btn-secondary bi bi-arrow-left-square"> Главная</a>
             </div>
