--- a/market-core/src/main/resources/templates/order.html
+++ b/market-core/src/main/resources/templates/order.html
@@ -22,6 +22,7 @@
                 <h2>
                     <span class="badge text-bg-success">Витрина магазина</span>
                 </h2>
+                <a href="/logout" class="btn btn-outline-danger bi bi-box-arrow-right"> Выйти</a>
                 <a href="/orders" class="btn btn-secondary ms-auto bi bi-file-earmark-text"> Заказы</a>
                 <a href="/cart/items" class="btn btn-secondary bi bi-cart4"> Корзина</a>
                 <a href="/items" class="btn btn-secondary bi bi-arrow-left-square"> Главная</a>
